# ros2_mediapipe

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
benchmark/: camera_exposure_monitor.py  camera_exposure_report.py  camera_fps_monitor.py  camera_fps_report.py  camera_frame_skip_monitor.py  camera_frame_skip_report.py  coco_evaluator.py  coco_loader.py  confidence_threshold_monitor.py  confidence_threshold_report.py  config.yaml  model_comparison_report.py  resource_monitor.py  test_coco_inference.py  test_gesture_performance.py  test_pose_performance.py
benchmark/results/: camera_exposure_experiment_20251204_085957.csv  camera_exposure_experiment_20251204_090322.csv  camera_exposure_experiment_20251204_090516.csv  camera_exposure_experiment_20251204_090747.csv  camera_exposure_experiment_20251204_091154.csv  camera_exposure_experiment_20251204_185549.csv  camera_exposure_experiment_20251204_185833.csv  camera_exposure_experiment_20251204_190111.csv  camera_exposure_readme_section.md  camera_exposure_summary.md  camera_fps_experiment_20251203_232006.csv  camera_fps_experiment_20251203_232812.csv  camera_fps_experiment_20251203_233253.csv  camera_fps_experiment_20251203_233505.csv  camera_fps_experiment_20251204_081557.csv  camera_fps_readme_section.md  camera_fps_summary.md  camera_frame_skip_experiment_20251204_094544.csv  camera_frame_skip_experiment_20251204_094804.csv  camera_frame_skip_experiment_20251204_095230.csv  camera_frame_skip_experiment_20251204_095733.csv  camera_frame_skip_readme_section.md  camera_frame_skip_summary.md  confidence_threshold_experiment_20251204_190547.csv  confidence_threshold_experiment_20251204_190744.csv  confidence_threshold_experiment_20251204_190946.csv  confidence_threshold_experiment_20251204_191146.csv  confidence_threshold_experiment_20251204_191346.csv  confidence_threshold_readme_section.md  confidence_threshold_summary.md  gesture_performance.json  model_comparison_image_mode.json  model_comparison_image_mode_readme_section.md  pose_performance.json
examples/: simple_gesture_subscriber.py  simple_object_subscriber.py  simple_pose_subscriber.py
launch/: gesture_recognition.launch.py  gesture_recognition_baseline.launch.py  object_detection.launch.py  object_detection_baseline.launch.py  pose_detection.launch.py  pose_detection_baseline.launch.py
models/: README.md
mpipe/: __init__.py  base_node.py
mpipe/common/: __init__.py  base_node.py  callback_mixin.py  config.py
mpipe/controllers/: __init__.py  base.py  gesture_recognition.py  object_detection.py  pose_detection.py
mpipe/core/: __init__.py  detector_factory.py  lock_lifecycle.py
mpipe/nodes/: __init__.py  gesture_recognition_baseline.py  gesture_recognition_node.py  object_detection_baseline.py  object_detection_node.py  pose_detection_baseline.py  pose_detection_node.py
mpipe/utils/: __init__.py  message_converter.py
msg/: DetectedObject.msg  DetectedObjects.msg  HandGesture.msg  PoseLandmarks.msg
